# rng

./: COPYRIGHT.txt  Cargo.toml  LICENSE-MIT  README.md
src/: categorical.rs  chacha20.rs  dist.rs  lib.rs  os.rs  romu.rs  splitmix.rs  urandom.rs  utils.rs  xorshift.rs
