[package]
name = "rng"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "Random number generators."
repository = "https://github.com/peterhj/librng"
keywords = ["random", "rng"]

[lib]
name = "rng"
path = "src/lib.rs"

[dependencies]
rand = "^0.3"
